--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_apiKey=
-REACT_APP_authDomain=
-REACT_APP_projectId=
-REACT_APP_storageBucket=
-REACT_APP_messagingSenderId=
-REACT_APP_appId=
+REACT_APP_apiKey=AIzaSyA9jFfIwvcu3N9Li8AGJTOOsuc5ubmcjgA
+REACT_APP_authDomain=entrega-final-fb9a1.firebaseapp.com
+REACT_APP_projectId=entrega-final-fb9a1
+REACT_APP_storageBucket=entrega-final-fb9a1.appspot.com
+REACT_APP_messagingSenderId=339344500560
+REACT_APP_appId=1:339344500560:web:0144808ee754881c42ae55
